--- a/livro/style.css
+++ b/livro/style.css
@@ -201,14 +201,15 @@ body.dark-mode {
 
 /* Preview dentro do celular */
 body.preview-mode #flip_book {
-  width: 150px;
-  height: 200px;
+  width: 151px;
+  height: 201px;
   margin: -60px auto 0 auto; /* 🔹 sobe um pouco pra não cobrir o timer */
   transform: translateY(0) scale(1);
   transform-origin: center center;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   perspective: 1200px;
 }
+
 
 /* Livro aberto — centraliza e dá leve zoom */
 body.preview-mode.book-aberto #flip_book {
@@ -251,4 +252,5 @@ body.preview-mode.book-aberto #flip_book {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin: 0px;
 }
